<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="activity_home">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/nav_biography"
            android:icon="@drawable/ic_biography"
            android:title="@string/biography" />

        <item
            android:id="@+id/nav_business"
            android:icon="@drawable/ic_business"
            android:title="@string/business" />

        <item
            android:id="@+id/nav_compTech"
            android:icon="@drawable/ic_comptech"
            android:title="@string/computer_and_tech" />

        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_history"
            android:title="@string/history" />

        <item
            android:id="@+id/nav_leadership"
            android:icon="@drawable/ic_leadership"
            android:title="@string/leadership" />

        <item
            android:id="@+id/nav_novels"
            android:icon="@drawable/ic_novels"
            android:title="@string/novels" />
    </group>

    <item android:title="@string/profile">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_profile"
                    android:icon="@drawable/ic_user"
                    android:title="@string/profile" />
                <item
                    android:id="@+id/nav_logout"
                    android:icon="@drawable/ic_logout"
                    android:title="@string/logout" />

                <item android:id="@+id/nav_insert"
                    android:title="@string/insert_book"
                    android:icon="@drawable/ic_add"/>

            </group>
        </menu>
    </item>

    <item android:title="@string/services">
        <menu>
            <group android:checkableBehavior="single">

                <item android:id="@+id/nav_rate"
                    android:title="@string/rate"
                    android:icon="@drawable/ic_rate"/>

                <item android:id="@+id/nav_share"
                    android:title="@string/share"
                    android:icon="@drawable/ic_share"/>

                <item android:id="@+id/nav_email"
                    android:title="@string/send_us_email"
                    android:icon="@drawable/ic_email"/>

                <item android:id="@+id/nav_about"
                    android:title="@string/about_us"
                    android:icon="@drawable/ic_about"/>
            </group>
        </menu>
    </item>
</menu>